[package]
name = "janus-eventhandler-sqlite"
description = "Janus event handler for outputting event logs to SQLite."
version = "0.1.0"
authors = ["Marshall Quander <marshall@quander.me>"]
license = "MPL-2.0"
publish = false

[lib]
crate_type = ["cdylib"]

[dependencies]
atom = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust-ini = "0.10"
janus-plugin = { version = "0.9.0", features = ["refcount"], path = "../janus-plugin-rs" }
lazy_static = "1.0"
rusqlite = { version = "0.13", features = ["chrono", "serde_json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"